<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameParentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="1dp"
        android:layout_margin="5dp"
        android:background="@drawable/background_for_drawing_screen"
        app:layout_constraintBottom_toTopOf="@id/llPaintColorPallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imgBg"
            android:scaleType="centerCrop"
            android:contentDescription="@string/backgroundimage"
            />

        <com.mrkumar.kidsdrawingapp.DrawingView
            android:id="@+id/drawLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF"/>

    </FrameLayout>



    <LinearLayout
        android:id="@+id/llPaintColorPallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/brush"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameParentLayout">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/skin"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallet"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin"
            android:onClick="selectedColor"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/red"
            android:contentDescription="@string/color_pallet"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            android:onClick="selectedColor"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/green"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallet"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green"
            android:onClick="selectedColor"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/black"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallet"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"
            android:onClick="selectedColor"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/blue"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallet"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue"
            android:onClick="selectedColor"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/yellow"
            android:layout_margin="2dp"
            android:contentDescription="@string/color_pallet"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow"
            android:onClick="selectedColor"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/lollipop"
            android:contentDescription="@string/color_pallet"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop"
            android:onClick="selectedColor"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/random"
            android:contentDescription="@string/color_pallet"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random"
            android:onClick="selectedColor"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:contentDescription="@string/color_pallet"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white"
            android:onClick="selectedColor"/>


    </LinearLayout>


    <ImageButton
        android:id="@+id/brush"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/imagebrush"
        android:scaleType="fitXY"
        android:src="@drawable/brush"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnGalleryOpen"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/btngalleryopen"
        android:scaleType="fitXY"
        android:src="@drawable/gallery_icon"
        app:layout_constraintBottom_toBottomOf="@+id/brush"
        app:layout_constraintEnd_toStartOf="@id/brush"
        app:layout_constraintTop_toTopOf="@+id/brush" />
    <ImageButton
        android:id="@+id/btnUndo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:contentDescription="btnUndo"
        android:scaleType="fitXY"
        android:src="@drawable/undo_img"
        app:layout_constraintStart_toEndOf="@id/brush"
        app:layout_constraintTop_toTopOf="@id/brush"
        app:layout_constraintBottom_toBottomOf="@id/brush"/>

    <ImageButton
        android:id="@+id/btnSaveImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:contentDescription="btnSaveImage"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_save_24"
        app:layout_constraintStart_toEndOf="@id/btnUndo"
        app:layout_constraintTop_toTopOf="@id/btnUndo"
        app:layout_constraintBottom_toBottomOf="@id/btnUndo"/>
</androidx.constraintlayout.widget.ConstraintLayout>